MODUSERS-536: Improve build time (#427)