@@ -1,20 +1,39 @@
 
 package org.folio.rest.impl;
 
-import static java.util.concurrent.TimeUnit.MINUTES;
-import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.apache.http.HttpStatus.SC_BAD_REQUEST;
+import static org.apache.http.HttpStatus.SC_NOT_FOUND;
+import static org.apache.http.HttpStatus.SC_NO_CONTENT;
+import static org.apache.http.HttpStatus.SC_UNPROCESSABLE_ENTITY;
 import static org.folio.event.UserEventType.USER_CREATED;
 import static org.folio.event.UserEventType.USER_DELETED;
 import static org.folio.event.UserEventType.USER_UPDATED;
+import static org.folio.extensions.KafkaContainerExtension.getTopicName;
+import static org.folio.support.TestConstants.TENANT_NAME;
+import static org.folio.support.matchers.DomainEventAssertions.await;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.matchesPattern;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
+import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
+
+import io.vertx.core.Vertx;
 import io.vertx.core.json.Json;
-import io.vertx.junit5.Timeout;
-import io.vertx.junit5.VertxExtension;
+import io.vertx.junit5.VertxTestContext;
+import io.vertx.kafka.client.consumer.KafkaConsumerRecord;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
+
 import org.folio.domain.UserType;
 import org.folio.event.UserEventType;
 import org.folio.moduserstest.AbstractRestTestNoData;
@@ -26,33 +45,36 @@ import org.folio.support.User;
 import org.folio.support.ValidationErrors;
 import org.folio.support.http.UserTenantClient;
 import org.folio.support.http.UsersClient;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.testcontainers.shaded.org.awaitility.Awaitility;
+import org.folio.support.kafka.FakeKafkaConsumer;
+import org.folio.support.tags.IntegrationTest;
 
-import java.util.Arrays;
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
-@Timeout(value = 20, timeUnit = SECONDS)
-@ExtendWith(VertxExtension.class)
-class UsersAPIConsortiaTest extends AbstractRestTestNoData {
+@IntegrationTest
+class UsersAPIConsortiaIT extends AbstractRestTestNoData {
 
   private static UsersClient usersClient;
   private static UserTenantClient userTenantClient;
+  private static FakeKafkaConsumer kafkaConsumer;
 
   @BeforeAll
-  static void beforeAll() {
+  static void beforeAll(Vertx vertx) {
+    kafkaConsumer = new FakeKafkaConsumer().consume(vertx,
+      getTopicName(TENANT_NAME, USER_CREATED.getTopicName()),
+      getTopicName(TENANT_NAME, USER_UPDATED.getTopicName()),
+      getTopicName(TENANT_NAME, USER_DELETED.getTopicName()));
+
     usersClient = new UsersClient(okapiUrl, okapiHeaders);
     userTenantClient = new UserTenantClient(okapiUrl, okapiHeaders);
   }
 
   @BeforeEach
-  public void beforeEach() {
+  void beforeEach() {
     usersClient.deleteAllUsers();
+    kafkaConsumer.removeAllEvents();
+  }
+
+  @AfterAll
+  static void afterAll(VertxTestContext context) {
+    kafkaConsumer.closeAsync().onComplete(context.succeedingThenComplete());
   }
 
   @Test
@@ -66,19 +88,15 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     User userToUpdate = createUser(userId, "joannek", "new_julia", "patron");
 
     usersClient.attemptToUpdateUser(userToUpdate)
-      .statusCode(is(204));
+      .statusCode(SC_NO_CONTENT);
     usersClient.deleteUser(user.getId());
 
-    List<UserEvent> userCreatedEvents = getUserEventsAndFilterByUserId(USER_CREATED, userId);
-    List<UserEvent> userUpdatedEvents = getUserEventsAndFilterByUserId(USER_UPDATED, userId);
-    List<UserEvent> userDeletedEvents = getUserEventsAndFilterByUserId(USER_DELETED, userId);
-
-    assertEquals(0, userCreatedEvents.size());
-    assertEquals(0, userUpdatedEvents.size());
-    assertEquals(1, userDeletedEvents.size());
+    await().until(() -> getUserEvents(USER_DELETED, userId), hasSize(1));
+    await(3).until(() -> getUserEvents(USER_CREATED, userId), hasSize(0));
+    await().until(() -> getUserEvents(USER_UPDATED, userId), hasSize(0));
 
     usersClient.attemptToGetUser(user.getId())
-      .statusCode(404);
+      .statusCode(SC_NOT_FOUND);
   }
 
   @Test
@@ -92,19 +110,15 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     User userToUpdate = createUser(userId, "joannek", "new_julia", "shadow");
 
     usersClient.attemptToUpdateUser(userToUpdate)
-      .statusCode(is(204));
+      .statusCode(SC_NO_CONTENT);
     usersClient.deleteUser(user.getId());
 
-    List<UserEvent> userCreatedEvents = getUserEventsAndFilterByUserId(USER_CREATED, userId);
-    List<UserEvent> userUpdatedEvents = getUserEventsAndFilterByUserId(USER_UPDATED, userId);
-    List<UserEvent> userDeletedEvents = getUserEventsAndFilterByUserId(USER_DELETED, userId);
-
-    assertEquals(0, userCreatedEvents.size());
-    assertEquals(0, userUpdatedEvents.size());
-    assertEquals(1, userDeletedEvents.size());
+    await().until(() -> getUserEvents(USER_DELETED, userId), hasSize(1));
+    await(3).until(() -> getUserEvents(USER_CREATED, userId), hasSize(0));
+    await().until(() -> getUserEvents(USER_UPDATED, userId), hasSize(0));
 
     usersClient.attemptToGetUser(user.getId())
-      .statusCode(404);
+      .statusCode(SC_NOT_FOUND);
   }
 
   @Test
@@ -116,17 +130,17 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final var user = usersClient.createUser(userToCreate);
     usersClient.deleteUser(user.getId());
 
-    List<UserEvent> userCreatedEvents = getUserEventsAndFilterByUserId(USER_CREATED, userId);
-    List<UserEvent> userDeletedEvents = getUserEventsAndFilterByUserId(USER_DELETED, userId);
+    var userCreatedEvents = await().until(() -> getUserEvents(USER_CREATED, userId), hasSize(1));
+    var userDeletedEvents = await().until(() -> getUserEvents(USER_DELETED, userId), hasSize(1));
 
     assertEquals(1, userCreatedEvents.size());
-    assertEventContent(userCreatedEvents.get(0), UserEvent.Action.CREATE, user.getId());
+    assertEventContent(userCreatedEvents.getFirst(), UserEvent.Action.CREATE, user.getId());
 
     assertEquals(1, userDeletedEvents.size());
-    assertEventContent(userDeletedEvents.get(0), UserEvent.Action.DELETE, user.getId());
+    assertEventContent(userDeletedEvents.getFirst(), UserEvent.Action.DELETE, user.getId());
 
     usersClient.attemptToGetUser(user.getId())
-      .statusCode(404);
+      .statusCode(SC_NOT_FOUND);
   }
 
   @Test
@@ -139,24 +153,24 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final User userToUpdate = createUser(userId, "joannek", "new_julia", "system");
 
     usersClient.attemptToUpdateUser(userToUpdate)
-      .statusCode(is(204));
+      .statusCode(SC_NO_CONTENT);
     usersClient.deleteUser(user.getId());
 
-    List<UserEvent> userCreatedEvents = getUserEventsAndFilterByUserId(USER_CREATED, userId);
-    List<UserEvent> userUpdatedEvents = getUserEventsAndFilterByUserId(USER_UPDATED, userId);
-    List<UserEvent> userDeletedEvents = getUserEventsAndFilterByUserId(USER_DELETED, userId);
+    var userCreatedEvents = await().until(() -> getUserEvents(USER_CREATED, userId), hasSize(1));
+    var userUpdatedEvents = await().until(() -> getUserEvents(USER_UPDATED, userId), hasSize(1));
+    var userDeletedEvents = await().until(() -> getUserEvents(USER_DELETED, userId), hasSize(1));
 
     assertEquals(1, userCreatedEvents.size());
-    assertEventContent(userCreatedEvents.get(0), UserEvent.Action.CREATE, user.getId());
+    assertEventContent(userCreatedEvents.getFirst(), UserEvent.Action.CREATE, user.getId());
 
     assertEquals(1, userUpdatedEvents.size());
-    assertEventContent(userUpdatedEvents.get(0), UserEvent.Action.EDIT, user.getId());
+    assertEventContent(userUpdatedEvents.getFirst(), UserEvent.Action.EDIT, user.getId());
 
     assertEquals(1, userDeletedEvents.size());
-    assertEventContent(userDeletedEvents.get(0), UserEvent.Action.DELETE, user.getId());
+    assertEventContent(userDeletedEvents.getFirst(), UserEvent.Action.DELETE, user.getId());
 
     usersClient.attemptToGetUser(user.getId())
-      .statusCode(404);
+      .statusCode(SC_NOT_FOUND);
   }
 
   @Test
@@ -169,16 +183,13 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final User userToUpdate = createUser(userId, null, "new_julia", "system");
 
     usersClient.attemptToUpdateUser(userToUpdate)
-      .statusCode(is(204));
+      .statusCode(SC_NO_CONTENT);
 
-    Awaitility.await()
-      .atMost(1, MINUTES)
-      .pollInterval(5, SECONDS)
-      .untilAsserted(() -> {
-        final var updatedUser = usersClient.getUser(userId);
-        assertThat(updatedUser.getPersonal().getFirstName(), is("new_julia"));
-        assertNull(updatedUser.getUsername());
-      });
+    awaitUntilAsserted(() -> {
+      final var updatedUser = usersClient.getUser(userId);
+      assertThat(updatedUser.getPersonal().getFirstName(), is("new_julia"));
+      assertNull(updatedUser.getUsername());
+    });
   }
 
   @Test
@@ -191,16 +202,13 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final User userToUpdate = createUser(userId, "joannek", "new_julia", "new_julia@email.com", "staff");
 
     usersClient.attemptToUpdateUser(userToUpdate)
-      .statusCode(is(204));
+      .statusCode(SC_NO_CONTENT);
 
-    Awaitility.await()
-      .atMost(1, MINUTES)
-      .pollInterval(5, SECONDS)
-      .untilAsserted(() -> {
-        final var updatedUser = usersClient.getUser(userId);
-        assertThat(updatedUser.getPersonal().getFirstName(), is("new_julia"));
-        assertThat(updatedUser.getPersonal().getEmail(), is("new_julia@email.com"));
-      });
+    awaitUntilAsserted(() -> {
+      final var updatedUser = usersClient.getUser(userId);
+      assertThat(updatedUser.getPersonal().getFirstName(), is("new_julia"));
+      assertThat(updatedUser.getPersonal().getEmail(), is("new_julia@email.com"));
+    });
   }
 
   @Test
@@ -211,18 +219,24 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final User userToCreate = createUser(userId, "joannek", "julia", "staff");
     usersClient.createUser(userToCreate);
     usersClient.attemptToUpdateUser(createUser(userId, "user_test", "julia", "staff"))
-      .statusCode(400)
+      .statusCode(SC_BAD_REQUEST)
       .body(is("User with this username already exists"));
   }
 
-  @Test
-  void cannotCreateUserWithSameUsernameAsExistingUserForConsortia() {
+  @ParameterizedTest
+  @DisplayName("cannotCreateUserForConsortia")
+  @CsvSource(nullValues = "null", value = {
+    "user_test, julia, staff",
+    "joannek, jules, null",
+    "joannek, jules, invalidType"
+  })
+  void cannotCreateUserForConsortia(String username, String firstName, String type) {
     UserTenant userTenant = getUserTenant();
     userTenantClient.attemptToSaveUserTenant(userTenant);
     String userId = UUID.randomUUID().toString();
-    final User userToCreate = createUser(userId, "user_test", "julia", "staff");
+    final User userToCreate = createUser(userId, username, firstName, type);
     usersClient.attemptToCreateUser(userToCreate)
-      .statusCode(422)
+      .statusCode(SC_UNPROCESSABLE_ENTITY)
       .extract().as(ValidationErrors.class);
   }
 
@@ -235,18 +249,7 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     String usernameInUpperCase = "User_Test";
     final User userToCreate = createUser(userId, usernameInUpperCase, "julia", "staff");
     usersClient.attemptToCreateUser(userToCreate)
-      .statusCode(422)
-      .extract().as(ValidationErrors.class);
-  }
-
-  @Test
-  void cannotCreateUserWithoutUserTypeForConsortia() {
-    UserTenant userTenant = getUserTenant();
-    userTenantClient.attemptToSaveUserTenant(userTenant);
-    String userId = UUID.randomUUID().toString();
-    final User userToCreate = createUser(userId, "joannek", "julia", null);
-    usersClient.attemptToCreateUser(userToCreate)
-      .statusCode(422)
+      .statusCode(SC_UNPROCESSABLE_ENTITY)
       .extract().as(ValidationErrors.class);
   }
 
@@ -257,7 +260,7 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     String userId = UUID.randomUUID().toString();
     final User userToCreate = createUser(userId, null, "julia", "staff");
     usersClient.attemptToCreateUser(userToCreate)
-      .statusCode(400)
+      .statusCode(SC_BAD_REQUEST)
       .body(matchesPattern("The user with the ID .* must have a username since consortium mode is enabled"));
   }
 
@@ -269,7 +272,7 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final User userToCreate = createUser(userId, "joannek", "julia", "staff");
     usersClient.createUser(userToCreate);
     usersClient.attemptToUpdateUser(createUser(userId, null, "julia", "staff"))
-      .statusCode(400)
+      .statusCode(SC_BAD_REQUEST)
       .body(matchesPattern("The user with the ID .* must have a username since consortium mode is enabled"));
   }
 
@@ -281,20 +284,9 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final User userToCreate = createUser(userId, "joannek", "julia", "staff");
     usersClient.createUser(userToCreate);
     usersClient.attemptToUpdateUser(createUser(userId, "joannek", "julia", null))
-      .statusCode(400)
+      .statusCode(SC_BAD_REQUEST)
       .body(is(String.format("An invalid user type has been populated to a user, allowed values: %s",
         Arrays.stream(UserType.values()).map(UserType::getTypeName).toList())));
-  }
-
-  @Test
-  void cannotCreateUserWithInvalidUserTypeForConsortia() {
-    UserTenant userTenant = getUserTenant();
-    userTenantClient.attemptToSaveUserTenant(userTenant);
-    String userId = UUID.randomUUID().toString();
-    final User userToCreate = createUser(userId, "joannek", "julia", "invalidType");
-    usersClient.attemptToCreateUser(userToCreate)
-      .statusCode(422)
-      .extract().as(ValidationErrors.class);
   }
 
   @Test
@@ -305,7 +297,7 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final User userToCreate = createUser(userId, "joannek", "julia", "staff");
     usersClient.createUser(userToCreate);
     usersClient.attemptToUpdateUser(createUser(userId, "joannek", "julia", "invalidType"))
-      .statusCode(400)
+      .statusCode(SC_BAD_REQUEST)
       .body(is(String.format("An invalid user type has been populated to a user, allowed values: %s",
         Arrays.stream(UserType.values()).map(UserType::getTypeName).toList())));
   }
@@ -322,19 +314,16 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     final User userToUpdate = createUser(userId, "joannek", "julia", "patron");
 
     usersClient.attemptToUpdateUser(userToUpdate)
-      .statusCode(is(204));
+      .statusCode(is(SC_NO_CONTENT));
 
-    Awaitility.await()
-      .atMost(1, MINUTES)
-      .pollInterval(5, SECONDS)
-      .untilAsserted(() -> {
-        final var updatedUser = usersClient.getUser(userId);
-        assertThat(updatedUser.getType(), is("patron"));
-      });
+    awaitUntilAsserted(() -> {
+      final var updatedUser = usersClient.getUser(userId);
+      assertThat(updatedUser.getType(), is("patron"));
+    });
 
-    List<UserEvent> userUpdatedEvents = getUserEventsAndFilterByUserId(USER_UPDATED, userId);
+    List<UserEvent> userUpdatedEvents = getUserEvents(USER_UPDATED, userId);
     assertEquals(1, userUpdatedEvents.size());
-    UserEvent userEvent = userUpdatedEvents.get(0);
+    UserEvent userEvent = userUpdatedEvents.getFirst();
     assertEventContent(userEvent, UserEvent.Action.EDIT, userToUpdate.getId());
     assertEquals(UserType.PATRON.getTypeName(), userEvent.getUser().getType());
   }
@@ -353,33 +342,25 @@ class UsersAPIConsortiaTest extends AbstractRestTestNoData {
     usersClient.attemptToUpdateUser(userToUpdate)
       .statusCode(is(204));
 
-    Awaitility.await()
-      .atMost(1, MINUTES)
-      .pollInterval(5, SECONDS)
-      .untilAsserted(() -> {
-        final var updatedUser = usersClient.getUser(userId);
-        assertThat(updatedUser.getType(), is("staff"));
-      });
+    awaitUntilAsserted(() -> {
+      final var updatedUser = usersClient.getUser(userId);
+      assertThat(updatedUser.getType(), is("staff"));
+    });
 
-    List<UserEvent> userUpdatedEvents = getUserEventsAndFilterByUserId(USER_UPDATED, userId);
+    List<UserEvent> userUpdatedEvents = getUserEvents(USER_UPDATED, userId);
     assertEquals(1, userUpdatedEvents.size());
-    UserEvent userEvent = userUpdatedEvents.get(0);
+    UserEvent userEvent = userUpdatedEvents.getFirst();
     assertEventContent(userEvent, UserEvent.Action.EDIT, userToUpdate.getId());
     assertEquals(UserType.STAFF.getTypeName(), userEvent.getUser().getType());
   }
 
-  private List<UserEvent> getUserEventsAndFilterByUserId(UserEventType eventType, String userId) {
-    List<UserEvent> usersList = getUserEvents(eventType);
-    return usersList.stream()
-      .filter(userEvent -> userId.equals(userEvent.getUser().getId()))
-      .collect(Collectors.toList());
-  }
-
-  private List<UserEvent> getUserEvents(UserEventType eventType) {
-    List<String> usersList = checkKafkaEventSent(TENANT_NAME, eventType.getTopicName());
-    return usersList.stream()
-      .map(s -> Json.decodeValue(s, UserEvent.class))
-      .collect(Collectors.toList());
+  private static List<UserEvent> getUserEvents(UserEventType eventType, String userId) {
+    var topicName = getTopicName(TENANT_NAME, eventType.getTopicName());
+    var events = kafkaConsumer.getEvents(topicName, userId);
+    return events.stream()
+      .map(KafkaConsumerRecord::value)
+      .map(msgValue -> Json.decodeValue(msgValue.encode(), UserEvent.class))
+      .toList();
   }
 
   private void assertEventContent(UserEvent userEvent, UserEvent.Action action, String userId) {
